fdo#74137: Fix for courruption of Pie chart after roundtrip.

Problem:
  - Pie chart with data labels files gets corrupt because of label position is
    bestFit in original file.
  - But after round trip, data labels position gets changes to top, left and right.
    For some data labels postion value is missing.
Implementaion:
  - In LO, while converting data label from model, the position gets changed.
    So we are ignoring this hack for Pie chart.

Change-Id: Ic51845cd6f39bc905439eea8971e878607d25dac